v1.6.9.0
﻿IMPROVEMENTS / FIXES
- General:
	- Fix part filtering by search terms in the editors.
	- Fix Krakensbane adjustments when the active vessel dies.
	- Fix tracer visuals when the active vessel dies.
	- Adjust timing and conditions for auto-camera switching to and away from missiles.
- AI / WM:
	- Invert the roll target when the fly-to direction is below and behind the craft within the Immelmann turn angle.
	- Fix automatic gun range adjustments in the WM again.
	- Prevent Orbital AI from changing attitude while launched missile is still near spacecraft.
- Weapons:
  	- Corrections to penetration and ricochet velocity changes and ricochet positions.
    - Stop APS firing at dead missiles.
  	- 'subProjectileCount' has been deprecated and replaced with 'projectileCount'; this specifies number of pellets per shot (for shotguns, etc) to make it more intuitive. Existing shotgun-type weapons will need to update their bulletDefs.
 	  - The subMunitionType field for beehive ammo now uses the syntax of "ammotype; quantity" (e.g. subMunitionType = 35x228AHEADPellet; 30) with number of projectiles released on detonation set here instead of the subMunition's bulletDef.
  	- Missiles:
    		- Fix issue with Rotary Rails trying to use missiles that have previously been blown off from combat damage.
    		- Fix issue with MultiMissilelauncher Turrets throwing an NRE when AI firing.
       	- Fix mass changes of missiles that decouple boosters and add missile mass debug telemetry.
		    - Fix radar and heat targeting leading targets excessively (most apparent in orbit)
	    	- Change spacing missiles with continous rod warheads from Detonation Distance / 3 to  Min(Blast Radius / 3, Detonation Distance / 3)
        - Fix missile RCS FX constantly displaying.
		    - Missiles with RCS/Orbital homing types (i.e. HEKV) in vacuum now perform turn maneuver after launch to face target and only throttle up once facing target.

IMPROVEMENTS / FIXES
- UI: