@@ -13,7 +13,7 @@ ARMOR
 	Ductility = 0.15 //measure of deformation/elongation; 0 is Ceramic, 1 is rubber
 	Diffusivity = 48.8 //ability to diffuse thermal energy - laser resist
 	SafeUseTemp = 1694 // in Kelvin, safe-use temperature. Above this temp strength decreases
-	StealthRating = 1; //radar absorbsion, 0-1 scale, 0 is full radar absorbsion, 1 is full reflectivity
+	radarReflectivity = 1; //radar absorbsion, 0-1 scale, 0 is full radar absorbsion, 1 is full reflectivity
 	Cost = 100 //cost per cubic meter
 }
 
@@ -31,7 +31,7 @@ ARMOR
 	Ductility = 0.60
 	Diffusivity = 237
 	SafeUseTemp = 993
-	StealthRating = 1 
+	radarReflectivity = 1 
 	Cost = 400
 }
 
@@ -46,7 +46,7 @@ ARMOR
 	Ductility = 0.15
 	Diffusivity = 48.8
 	SafeUseTemp = 1694
-	StealthRating = 1
+	radarReflectivity = 1
 	Cost = 250
 }
 
@@ -61,7 +61,7 @@ ARMOR
 	Ductility = 0.58 
 	Diffusivity = 22
 	SafeUseTemp = 703 //Titanium loses tensile strength above 430 C
-	StealthRating = 1
+	radarReflectivity = 1
 	Cost = 5000
 }
 
@@ -76,7 +76,7 @@ ARMOR
 	Ductility = 0.07 
 	Diffusivity = 200
 	SafeUseTemp = 1830
-	StealthRating = 1 
+	radarReflectivity = 1 
 	Cost = 8000
 }
 
@@ -91,7 +91,7 @@ ARMOR
 	Ductility = 0.035 
 	Diffusivity = 0.04
 	SafeUseTemp = 770
-	StealthRating = 0.7
+	radarReflectivity = 1.1
 	Cost = 10000
 }
 
@@ -106,7 +106,7 @@ ARMOR
 	Ductility = 0.015 //will fail catastrophically if stressed past tolerance //0.98 Y/T
 	Diffusivity = 1.35
 	SafeUseTemp = 470 //resins vulnerable to heating, 1470 for raw fibre
-	StealthRating = 0.2 //something something fiberlgass transparent to radar
+	radarReflectivity = 1.2 //something something fiberlgass transparent to radar and letting sub-surface structure be reflected
 	Cost = 6600
 }
 
@@ -121,7 +121,7 @@ ARMOR
 	Ductility = 0.15 
 	Diffusivity = 12
 	SafeUseTemp = 1623
-	StealthRating = 1
+	radarReflectivity = 1
 	Cost = 21000
 }
 
@@ -136,5 +136,22 @@ ARMOR
 	Ductility = 0.12
 	Diffusivity = 58
 	SafeUseTemp = 644
+	radarReflectivity = 1
 	Cost = 600
+}
+ARMOR
+{
+    // Based on https://www.laird.com/sites/default/files/2021-10/RFP-DS-BSR%20MFS%2022092021.pdf
+    // List of other RAM products here: https://www.laird.com/sites/default/files/2023-02/Brochure-%20Absorber%20Infosheet_Military_Aerospace.pdf
+    name = Radar Absorbent Coating
+    Density = 4200
+    Strength = 5
+    Hardness = 514 // ~70 Shore hardness
+    Yield = 8 // Best guess from https://www.matweb.com/search/DataSheet.aspx?MatGUID=cbe7a469897a47eda563816c86a73520&ckck=1
+    YoungModulus = 0.1 // Best guess from https://www.matweb.com/search/DataSheet.aspx?MatGUID=cbe7a469897a47eda563816c86a73520&ckck=1
+    Ductility = 0.5
+    Diffusivity = 4 // best guess from https://ui.adsabs.harvard.edu/abs/2020IJT....41...12J/abstract
+    SafeUseTemp = 443
+    radarReflectivity = 0.1 // Will need to balance this, corresponds to -10 dB
+    Cost = 40000
 }
