@@ -28,7 +28,7 @@ MATERIAL
 	ignitionTemp = 510 
 	maxTemp = 700 
 	ImpactMod = 0.5
-	radarMod = 0.5
+	radarMod = 0.7
 }
 MATERIAL
 {
@@ -40,7 +40,7 @@ MATERIAL
 	ignitionTemp = -1 
 	maxTemp = -1 //934?
 	ImpactMod = 1
-	radarMod = 0.9
+	radarMod = 1
 }
 MATERIAL
 {
@@ -77,5 +77,20 @@ MATERIAL
 	ignitionTemp = 750
 	maxTemp = 993
 	ImpactMod = 0.75
-	radarMod = 0.33
+	radarMod = 0.8
+}
+MATERIAL
+{
+    // Based on https://www.cfoam.com/spec-sheets/
+    // Alternatives are https://www.laird.com/products/absorbers/microwave-absorbing-foams
+    // Non-foam alternative?: https://www.laird.com/sites/default/files/2021-01/DS%20Eccosorb%20MF500F.pdf
+    name = Radar Absorbent Foam
+    localizedName = #LOC_BDArmory_RAMFoam
+    massMod = 0.17
+    costMod = 10
+    healthMod = 0.01
+    ignitionTemp = -1 //IMO FTP Pt I, is non-combustible
+    maxTemp = 643 // Claimed max temp of 370C, many of the Eccosorb products range from 170-270C max temps
+    ImpactMod = 0.01
+    radarMod = 0.01 // Will need to balance this, corresponds to -20 dB
 }
