@@ -1162,6 +1162,7 @@ Localization
         #LOC_BDArmory_Steel = Steel
         #LOC_BDArmory_Titanium = Titanium
         #LOC_BDArmory_Composites = Composites
+        #LOC_BDArmory_RAMFoam = Radar Absorbent Foam
         #LOC_BDArmory_Armor_HullType = Hull Material
         #LOC_BDArmory_ArmorThickness = Armor Thickness
         #LOC_BDArmory_EquivalentThickness = Steel Equivalent Thickness
